--- a/PakFileTesting/PakFileTesting.csproj
+++ b/PakFileTesting/PakFileTesting.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{0249158C-40CA-4065-B956-B240E6E4DA31}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>PakFileTesting</RootNamespace>
-    <AssemblyName>PakFileTesting</AssemblyName>
+    <RootNamespace>DragonNestTools</RootNamespace>
+    <AssemblyName>DragonNestTools</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
